--- a/fillPaintMaster/FrontCarViewController.xib
+++ b/fillPaintMaster/FrontCarViewController.xib
@@ -7,6 +7,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="FrontCarViewController">
             <connections>
+                <outlet property="a1Btn" destination="h7Z-1A-WSn" id="dPH-M0-ycR"/>
+                <outlet property="a2Btn" destination="YKB-tH-7cg" id="nID-va-vTj"/>
+                <outlet property="aABtn" destination="mzB-au-J3T" id="hYe-KP-hOf"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -22,21 +25,21 @@
                             <rect key="frame" x="63" y="54" width="157" height="105"/>
                             <animations/>
                         </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mzB-au-J3T">
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mzB-au-J3T">
                             <rect key="frame" x="126" y="33" width="114" height="95"/>
                             <animations/>
                             <state key="normal" backgroundImage="aA"/>
                             <state key="selected" backgroundImage="aA0"/>
                             <state key="highlighted" backgroundImage="aA0"/>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h7Z-1A-WSn">
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h7Z-1A-WSn">
                             <rect key="frame" x="85" y="136" width="86" height="54"/>
                             <animations/>
                             <state key="normal" backgroundImage="a1"/>
                             <state key="selected" backgroundImage="a10"/>
                             <state key="highlighted" backgroundImage="a10"/>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YKB-tH-7cg">
+                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YKB-tH-7cg">
                             <rect key="frame" x="101" y="136" width="93" height="37"/>
                             <animations/>
                             <state key="normal" backgroundImage="a2"/>
