--- a/fillPaintMaster/OtherCarViewController.xib
+++ b/fillPaintMaster/OtherCarViewController.xib
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14F1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7706"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="OtherCarViewController">
             <connections>
+                <outlet property="containerView" destination="JnE-oL-zQS" id="0uu-hf-E1H"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -16,39 +17,27 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JnE-oL-zQS">
-                    <rect key="frame" x="19" y="178" width="283" height="213"/>
-                    <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9cO-1L-9w5">
-                            <rect key="frame" x="118" y="92" width="46" height="30"/>
-                            <animations/>
-                            <state key="normal" title="门把手"/>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nfw-W0-SPl">
-                            <rect key="frame" x="193" y="92" width="90" height="30"/>
-                            <animations/>
-                            <state key="normal" title="右前反光镜"/>
-                        </button>
-                        <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KFj-WO-1q0">
-                            <rect key="frame" x="8" y="92" width="88" height="30"/>
-                            <animations/>
-                            <state key="normal" title="左侧反光镜"/>
-                        </button>
-                    </subviews>
+                    <rect key="frame" x="0.0" y="178" width="320" height="213"/>
                     <animations/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="283" id="2nT-b3-JhD"/>
-                        <constraint firstAttribute="height" constant="213" id="iD3-nT-oRq"/>
+                        <constraint firstAttribute="height" constant="213" id="9if-nv-4fh"/>
+                        <constraint firstAttribute="width" constant="320" id="Q9Z-kg-QqN"/>
                     </constraints>
                 </view>
             </subviews>
             <animations/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="JnE-oL-zQS" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="Bud-p0-lUw"/>
-                <constraint firstItem="JnE-oL-zQS" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="vuj-Fe-QFn"/>
+                <constraint firstAttribute="centerX" secondItem="JnE-oL-zQS" secondAttribute="centerX" id="bFF-CO-2r2"/>
+                <constraint firstAttribute="centerY" secondItem="JnE-oL-zQS" secondAttribute="centerY" id="qb3-T3-qid"/>
             </constraints>
             <point key="canvasLocation" x="224" y="265"/>
         </view>
     </objects>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
